src/parser/snapshots/rex__parser__tests__snapshot_radicals-6.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\sqrt\\sqrt2\")"
---
Ok(
    [
        Radical(
            Radical {
                inner: [
                    Radical(
                        Radical {
                            inner: [
                                Symbol(
                                    Symbol {
                                        codepoint: '2',
                                        atom_type: Alpha,
                                    },
                                ),
                            ],
                        },
                    ),
                ],
            },
        ),
    ],
)
