src/parser/snapshots/rex__parser__tests__snapshot_radicals-7.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\sqrt2_3\")"
---
Ok(
    [
        Scripts(
            Scripts {
                base: Some(
                    Radical(
                        Radical {
                            inner: [
                                Symbol(
                                    Symbol {
                                        codepoint: '2',
                                        atom_type: Alpha,
                                    },
                                ),
                            ],
                            character: '√',
                        },
                    ),
                ),
                superscript: None,
                subscript: Some(
                    [
                        Symbol(
                            Symbol {
                                codepoint: '3',
                                atom_type: Alpha,
                            },
                        ),
                    ],
                ),
            },
        ),
    ],
)
