src/parser/snapshots/rex__parser__tests__snapshot_radicals-8.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\sqrt{2_3}\")"
---
Ok(
    [
        Radical(
            Radical {
                inner: [
                    Scripts(
                        Scripts {
                            base: Some(
                                Symbol(
                                    Symbol {
                                        codepoint: '2',
                                        atom_type: Alpha,
                                    },
                                ),
                            ),
                            superscript: None,
                            subscript: Some(
                                [
                                    Symbol(
                                        Symbol {
                                            codepoint: '3',
                                            atom_type: Alpha,
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
                character: '√',
            },
        ),
    ],
)
