src/parser/snapshots/rex__parser__tests__snapshot_radicals.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\sqrt{x}\")"
---
Ok(
    [
        Radical(
            Radical {
                inner: [
                    Symbol(
                        Symbol {
                            codepoint: '𝑥',
                            atom_type: Alpha,
                        },
                    ),
                ],
            },
        ),
    ],
)
