src/parser/snapshots/rex__parser__tests__snapshot_scripts-5.snap
---
source: src/parser/mod.rs
expression: "parse(r\"1^2^3\")"
---
Err(
    TooManySubscriptsOrSuperscripts,
)
