src/parser/snapshots/rex__parser__tests__snapshot_spacing-10.snap
---
source: src/parser/mod.rs
assertion_line: 852
expression: "parse(r\"a\\hspace{10pt}b\")"
---
Ok(
    [
        Symbol(
            Symbol {
                codepoint: '𝑎',
                atom_type: Alpha,
            },
        ),
        Kerning(
            Px(
                13.333333333333334,
            ),
        ),
        Symbol(
            Symbol {
                codepoint: '𝑏',
                atom_type: Alpha,
            },
        ),
    ],
)
