src/parser/snapshots/rex__parser__tests__snapshot_spacing-11.snap
---
source: src/parser/mod.rs
expression: "parse(r\"a\\vspace{2em}b\")"
---
Ok(
    [
        Symbol(
            Symbol {
                codepoint: '𝑎',
                atom_type: Alpha,
            },
        ),
        VerticalKerning(
            Em(
                2.0,
            ),
        ),
        Symbol(
            Symbol {
                codepoint: '𝑏',
                atom_type: Alpha,
            },
        ),
    ],
)
