src/parser/snapshots/rex__parser__tests__snapshot_spacing-12.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\smash{x^2}\")"
---
Ok(
    [
        Smash(
            Smash {
                inner: [
                    Scripts(
                        Scripts {
                            base: Some(
                                Symbol(
                                    Symbol {
                                        codepoint: '𝑥',
                                        atom_type: Alpha,
                                    },
                                ),
                            ),
                            superscript: Some(
                                [
                                    Symbol(
                                        Symbol {
                                            codepoint: '2',
                                            atom_type: Alpha,
                                        },
                                    ),
                                ],
                            ),
                            subscript: None,
                        },
                    ),
                ],
                mode: Both,
            },
        ),
    ],
)
