src/parser/snapshots/rex__parser__tests__snapshot_spacing-14.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\smash[b]{x_2}\")"
---
Ok(
    [
        Smash(
            Smash {
                inner: [
                    Scripts(
                        Scripts {
                            base: Some(
                                Symbol(
                                    Symbol {
                                        codepoint: '𝑥',
                                        atom_type: Alpha,
                                    },
                                ),
                            ),
                            superscript: None,
                            subscript: Some(
                                [
                                    Symbol(
                                        Symbol {
                                            codepoint: '2',
                                            atom_type: Alpha,
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
                mode: Bottom,
            },
        ),
    ],
)
