src/parser/snapshots/rex__parser__tests__snapshot_spacing-17.snap
---
source: src/parser/mod.rs
expression: "parse(r\"\\smash[x]{y}\")"
---
Err(
    UnrecognizedArgument(
        "x",
    ),
)
